x/programs/rust/sdk-macros/tests/ui/fail/named-fields-state-schema.stderr
error: enums with named fields are not supported
 --> tests/ui/fail/named-fields-state-schema.rs:6:13
  |
6 |     Invalid { param: u8 } => u8,
  |             ^^^^^^^^^^^^^
